--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/main.js"></script>
-    <title>プロフィールページ</title>
+    <title>portfolio</title>
   </head>
   <body class="contents_page">
     <header>
