--- a/profile.html
+++ b/profile.html
@@ -13,81 +13,41 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/main.js"></script>
-    <title>portfolio</title>
+    <title>about</title>
   </head>
   <body class="contents_page">
     <header>
       <div class="inner">
-        <div id="menu_btn"></div>
-        <p id="header_logo">
-          <a href="./index.html"><img src="./images/logo.svg" alt="" /></a>
-        </p>
+        
         <ul id="global_menu">
-          <li class="current"><a href="./profile.html">profile</a></li>
-          <li><a href="./works.html">works</a></li>
-          <li><a href="./slide.html">slide</a></li>
-          <li><a href="./report.html">report</a></li>
+          <li class="current"><a href="./profile.html">about</a></li>
+          <li><a href="./works.html">portfolio</a></li>
+          <li><a href="./index.html">Hibiki Morita</a></li>
         </ul>
       </div>
     </header>
 
     <div class="contents">
-      <section>
-        <div class="profile_container">
-          <h3>20xx</h3>
-          <div>誕生</div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-          <h3>20xx</h3>
-          <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
-          </div>
-        </div>
-      </section>
-    </div>
+   
+      <h1>Hibiki Morita</h1>
+       <h4>昔からスポーツが好きでこれまでに体操、水泳、サッカー、陸上をやっていたので運動は得意だったが、<br>
+        勉強は苦手で学校の成績は良くはなかった。でも、好きなことに対する熱量や好奇心は旺盛だったので、<br>
+        趣味が多く、写真や映像にテクノロジーやプログラミング、色んなことにチャレンジをしている。<br>
+        今、最もチャレンジしてみたいことは企業である。<br>
+        <br>
+        小学校：運動大好き少年<br>
+        中学校：LINEのアイコンをコロコロ変えていた<br>
+        高校生：読書に目覚める<br>
+        大学生：〜<br>
+        <br>
+        小さい頃から今まで人にだけは恵まれ続けている。</h4>
 
-    <footer>名前など</footer>
+        <img src="images/アートボード 1.jpg">
+
+    </div>
+    
+
+
+
   </body>
 </html>
