--- a/works.html
+++ b/works.html
@@ -29,58 +29,64 @@
 
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/main.js"></script>
-    <title>リストページ</title>
+    <title>portfolio</title>
   </head>
   <body class="contents_page">
     <header>
       <div class="inner">
         <div id="menu_btn"></div>
-        <p id="header_logo">
-          <a href="./index.html"><img src="./images/logo.svg" alt="" /></a>
-        </p>
+        
         <ul id="global_menu">
-          <li><a href="./profile.html">profile</a></li>
-          <li class="current"><a href="./works.html">works</a></li>
-          <li><a href="./slide.html">slide</a></li>
-          <li><a href="./report.html">report</a></li>
+          <li class="current"><a href="./profile.html">about</a></li>
+          <li><a href="./works.html">portfolio</a></li>
+          <li><a href="./index.html">Hibiki Morita</a></li>
         </ul>
+
       </div>
     </header>
 
     <section>
-      <div class="report_eye_catch">works</div>
       <div class="contents">
-        <h2>WORKS</h2>
+        <h2>2021</h2>
         <ul class="thumb_list">
           <li>
-            <a href="./images/toy01.jpg" data-lity
-              ><img src="./images/toy01.jpg" alt="サムネイル"
+            <a href="./images/IMG_8420.JPG" data-lity
+              ><img src="./images/IMG_8420.JPG" alt="サムネイル"
             /></a>
           </li>
           <li>
-            <a href="./images/toy02.jpg" data-lity
-              ><img src="./images/toy02.jpg" alt="サムネイル"
+            <a href="./images/DSC00614.jpg" data-lity
+              ><img src="./images/DSC00614.jpg" alt="サムネイル"
             /></a>
           </li>
           <li>
-            <a href="./images/toy03.jpg" data-lity
-              ><img src="./images/toy03.jpg" alt="サムネイル"
+            <a href="./images/IMG_0253.jpg" data-lity
+              ><img src="./images/IMG_0253.jpg" alt="サムネイル"
             /></a>
           </li>
           <li>
-            <a href="./images/toy04.jpg" data-lity
-              ><img src="./images/toy04.jpg" alt="サムネイル"
+            <a href="./images/DSC08911のコピー.jpg" data-lity
+              ><img src="./images/DSC08911のコピー.jpg" alt="サムネイル"
             /></a>
           </li>
           <li>
-            <a href="./images/toy03.jpg" data-lity
-              ><img src="./images/toy03.jpg" alt="サムネイル"
+            <a href="./images/IMG_9698.jpg" data-lity
+              ><img src="./images/IMG_9698.jpg" alt="サムネイル"
+            /></a>
+          </li>
+          <li>
+            <a href="./images/DSC00392.JPG" data-lity
+              ><img src="./images/DSC00392.JPG" alt="サムネイル"
+            /></a>
+          </li>
+          <li>
+            <a href="./images/DSC01116.JPG" data-lity
+              ><img src="./images/DSC01116.JPG" alt="サムネイル"
             /></a>
           </li>
         </ul>
       </div>
     </section>
 
-    <footer>名前など</footer>
   </body>
 </html>
