--- a/profile.html
+++ b/profile.html
@@ -27,13 +27,13 @@
       </div>
     </header>
 
-    <div class="contents">
+    <div class="Hibiki">
    
       <h1>Hibiki Morita</h1>
        <h4>昔からスポーツが好きでこれまでに体操、水泳、サッカー、陸上をやっていたので運動は得意だったが、<br>
         勉強は苦手で学校の成績は良くはなかった。でも、好きなことに対する熱量や好奇心は旺盛だったので、<br>
         趣味が多く、写真や映像にテクノロジーやプログラミング、色んなことにチャレンジをしている。<br>
-        今、最もチャレンジしてみたいことは企業である。<br>
+        今、最もチャレンジしてみたいことは起業である。<br>
         <br>
         小学校：運動大好き少年<br>
         中学校：LINEのアイコンをコロコロ変えていた<br>
@@ -42,11 +42,16 @@
         <br>
         小さい頃から今まで人にだけは恵まれ続けている。</h4>
 
-        <img src="images/アートボード 1.jpg">
+       
 
     </div>
     
+    <div class="photo">
 
+      <img src="images/hibikimorita.JPG">
+
+    </div>
+   
 
 
   </body>
