--- a/works.html
+++ b/works.html
@@ -91,8 +91,8 @@
             /></a>
           </li>
           <li>
-            <a href="./images/DSC08911のコピー.jpg" data-lity
-              ><img src="./images/DSC08911のコピー.jpg" alt="サムネイル"
+            <a href="./images/DSC08911111.jpg" data-lity
+              ><img src="./images/DSC08911111.jpg" alt="サムネイル"
             /></a>
           </li>
           <li>
